    . New meta-header visp3/visp.h that allows to include all ViSP headers
      in one line
    . New meta-header visp3/visp_<module>.h that allows to include all the
      headers of a given module in one line
    . When using cxx11 support (USE_CPP11=ON), the corresponding compiler
      flag is propagated to the project that use ViSP as 3rd party
  - Tutorials
    . New tutorial: How to use multi-threading capabilities
    . New tutorial: Crosscompilation for Raspberry Pi from Ubuntu host
    . New tutorial: Installation from prebuilt packages for Arch Linux
    . New tutorial: Installation from prebuilt packages for ROS
    . New tutorial: Installation from prebuilt packages for iOS devices
    . New tutorial: Installation from source for iOS devices
    . New tutorial: How to create a basic iOS application that uses ViSP
    . New tutorial: Image processing on iOS
  - Bug fixed
    . [#37] How to build for ios? build failed
    . [#38] Wrong urls in visp/doc/tutorial-calibration.doc
    . [#39] Meta header files visp_<module>.h not installed
    . [#40] vpKeyPoint fails to R/W database on big endian arch
    . [#42] Fails to build on Fedora 23 with Coin3-devel
    . [#44] Reshape issue with vpRowVector or vpColVector
    . [#47] Build issue in vpMath.h around vpMath::sign()
    . [#48] Fix vpPoseVector::getThetaUVector() to return the adequate vector
    . [#54] Error in vpHomography::projection()
    . [#59] Unable to use visp-config or visp-config.bat to build a project
            without CMake
    . [#68] Visual C++ 2010 unable to build modules\core\test\math\testMath.cpp
    . [#69] Unable to build ViSP under Windows without OpenCV 3rdparty
    . [#75] visp.pc pkgconfig file is corrupted by optimized and debug keywords
    . [#77] vpAROgre: wrong resources / plugins default path when used from
            ROS installation
    . [#82] Problem when comparing two vpImage (operator!=)